serpentine/src/snek/snapshots/serpentine__snek__tests__export_in_function.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
compiler::invalid_statement

  x export not allowed in function
   ,-[<redacted-path>:2:5]
 1 | def Foo() {
 2 |     export result = Image("rust:latest");
   :     ^^^|^^
   :        `-- This statement is not allowed here
 3 | }
   `----
  help: Maybe you meant to use `return` instead?
