serpentine/src/snek/snapshots/serpentine__snek__tests__export_unexpected_token.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
parsing::unexpected_token

  x Expected `import, def or ident`
   ,-[<redacted-path>:1:8]
 1 | export 5;
   :        |
   :        `-- Got `5`
   `----
