serpentine/src/snek/snapshots/serpentine__snek__tests__import_not_found.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
  x Importing module '<redacted-path>' failed
  |-> file_error
  |   
  |     x Could not read file <redacted-path>
  |   
  `-> OS error <redacted>
   ,-[<redacted-path>:1:8]
 1 | import "huh" as huh;
   :        ^^|^^
   :          `-- In this import statement
   `----
