serpentine/src/snek/snapshots/serpentine__snek__tests__invalid_utf8.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
file_error

  x Could not read file <redacted-path>
  `-> stream did not contain valid UTF-8
