serpentine/src/snek/snapshots/serpentine__snek__tests__item_not_found.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
compiler::item_not_found

  x 'ten' not found in scope
   ,-[<redacted-path>:1:18]
 1 | export DEFAULT = ten;
   :                  ^|^
   :                   `-- Item with this name not found
   `----
  help: Serpentine cannot reference items (including functions) before they are defined.
