serpentine/src/snek/snapshots/serpentine__snek__tests__item_wrong_kind.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
compiler::wrong_item_kind

  x Expected a label
   ,-[<redacted-path>:1:24]
 1 | export DEFAULT = Image(Image);
   :                        ^^|^^
   :                          `-- This is a 'function'
   `----
