serpentine/src/snek/snapshots/serpentine__snek__tests__missing_separator.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
parsing::unexpected_token

  x Expected `,`
   ,-[<redacted-path>:1:44]
 1 | export DEFAULT = Exec(Image("rust:latest") "world");
   :                                            ^^^|^^^
   :                                               `-- Got `"world"`
   `----
