serpentine/src/snek/snapshots/serpentine__snek__tests__no_return.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
compiler::no_return

  x No return found.
   ,-[<redacted-path>:1:5]
 1 | def Double(value) {}
   :     ^^^|^^
   :        `-- In this function.
 2 | 
   `----
