serpentine/src/snek/snapshots/serpentine__snek__tests__overflow_literal.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
parsing::integer_overflow

  x Integer literal overflow
  `-> number too large to fit in target type
   ,-[<redacted-path>:1:18]
 1 | export DEFAULT = 222222222222222222222222222222222222222;
   :                  ^^^^^^^^^^^^^^^^^^^|^^^^^^^^^^^^^^^^^^^
   :                                     `-- Integer literal too large
   `----
  help: Integer literals must be below 2^127 - 1
