serpentine/src/snek/snapshots/serpentine__snek__tests__recursion.snek.snap
---
source: serpentine/src/snek/mod.rs
expression: "$crate :: test_support :: render_error(& error)"
---
compiler::item_not_found

  x 'Foo' not found in scope
   ,-[<redacted-path>:2:12]
 1 | def Foo(value) {
 2 |     return Foo(value);
   :            ^|^
   :             `-- Item with this name not found
 3 | }
   `----
  help: Serpentine cannot reference items (including functions) before they are defined.
